syntax = "proto3";
option go_package = "./;pb";
package pb;

service MulService {
  rpc Mul (MulRequest) returns (MulResponse) {}
}

message MulRequest {
  int64 a = 1;
}

message MulResponse {
  int64 v = 1;
}
